# Project-PK

./: .gitignore  README.md  pyproject.toml
src/pkengine/: dosing.py  helpers.py  metrics.py  simulate.py  solvers.py  types.py
src/pkengine/models/: one_compartment.py
src/pkviz/: main.py
src/pkviz/ui/: controls.py  main_window.py  plots.py
tests/: test_closed_form.py
